# 20-20-20

./: .gitignore  README.md  main.py  pyproject.toml  settings.py
requirements/: requirements_wayland.txt
src/: linux_wayland_gdbus.py
src/sound/: base.py  factory.py  linux.py  windows.py
src/trackers/: base.py  factory.py  wayland.py  x11.py
